chore:fixed the overflow at newsletter

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1023,20 +1023,28 @@ color:var(--clr-white);
 @media screen and (max-width:#{$phone-width}) {
   .newsletter-grid {
     grid-template-columns: 1fr;
+    background-color: var(--natural-clr-1);
+    background-image: url("https://assets.website-files.com/6330105a320e0e0ed5adaf1c/63356051d0c8b5a95aa4039b_newsletter-shape-1.png"),
+    url("https://assets.website-files.com/6330105a320e0e0ed5adaf1c/63356051d0c8b5a95aa4039b_newsletter-shape-1.png");
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    
   }
   .newsletter-content {
     text-align: center;
   }
-  .container {
-    max-width: 100%;
-    padding-right: 15px;
-    padding-bottom: 0px;
-    padding-left: 15px;
-  }
-  .newsletter-grid {
-    padding-right: 30px;
-    padding-left: 30px;
-  }
+  // .container {
+  //   max-width: 100%;
+  //   padding-right: 15px;
+  //   padding-bottom: 0px;
+  //   padding-left: 15px;
+  // }
+  // .newsletter-grid {
+  //   padding-right: 30px;
+  //   padding-left: 30px;
+  // }
   .section-title {
     font-size: 20px;
   }
@@ -1905,7 +1913,6 @@ img {
 }
 .choose-list-item {
   display: flex;
-  // align-items: center;
   grid-column-gap: 25px;
 }
 .choose-image-icon {
@@ -2010,12 +2017,12 @@ p {
   .section-gap-bottom-130 {
     padding-bottom: 60px;
   }
-  .container {
-    max-width: 100%;
-    padding-right: 15px;
-    padding-bottom: 0px;
-    padding-left: 15px;
-  }
+  // .container {
+  //   max-width: 100%;
+  //   padding-right: 15px;
+  //   padding-bottom: 0px;
+  //   padding-left: 15px;
+  // }
   .choose-grid-layout {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
@@ -3335,6 +3342,7 @@ figure.card > figcaption {
 
 #chat {
   margin-left: 20px;
+  margin-bottom: 2rem;
 }
 #starter {
   font-size: 1.5rem;
